[project]
name = "valkey-ci-agent"
version = "0.1.0"
description = "CI automation agent for the Valkey project"
requires-python = ">=3.9,<3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "PyGithub==2.9.1",
    "PyYAML==6.0.3",
    "requests==2.32.5; python_version < '3.10'",
    "requests==2.34.2; python_version >= '3.10'",
    "urllib3==2.6.3; python_version < '3.10'",
    "urllib3==2.7.0; python_version >= '3.10'",
]

[build-system]
requires = [
    "setuptools==82.0.1; python_version < '3.10'",
    "setuptools==83.0.0; python_version >= '3.10'",
    "wheel==0.47.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scripts*"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "hypothesis==6.141.1",
    "mypy==1.19.1",
    "types-PyYAML==6.0.12.20250915",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.20",
    "pip-audit==2.9.0; python_version < '3.10'",
    "pip-audit==2.10.1; python_version >= '3.10'",
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "disable_publish_autouse: opt out of the autouse publish-guard fixture",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# Start conservative: just catch obvious bugs (E, F, W) + import ordering (I).
select = ["E", "F", "W", "I"]
ignore = [
    "E501",   # line-length handled by --line-length, not a hard error
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F401",  # test fixtures often reuse imports
    "F811",  # test fixtures often rebind names
    "E402",  # test files frequently set up sys.path before imports
    "F841",  # test bindings sometimes kept for documentation
    "E741",  # ambiguous names in tests
]
